<?xml version="1.0"?>
<?xml-model 
  href="http://download.ros.org/schema/package_format3.xsd" 
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easy_handeye_meta</name>
  <version>0.4.3</version>
  <description>Meta-package for easy handeye calibration in ROS2</description>

  <maintainer email="esposito@imfusion.com">Marco Esposito</maintainer>

  <license>LGPLv3</license>

  <author email="esposito@imfusion.com">Marco Esposito</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>easy_handeye</exec_depend>
  <exec_depend>easy_handeye_msgs</exec_depend>
  <exec_depend>rqt_easy_handeye</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <metapackage/>
  </export>
</package>