<?xml version="1.0"?>
<package format="2">
    <name>easy_handeye_meta</name>
    <version>0.4.3</version>
    <description>
        Metapackage for easy_handeye: automated, hardware-independent Hand-Eye Calibration for ROS1
    </description>

    <maintainer email="esposito@imfusion.com">Marco Esposito</maintainer>
    
    <license>LGPLv3</license>
    
    <author email="esposito@imfusion.com">Marco Esposito</author>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>easy_handeye</exec_depend>
    <exec_depend>easy_handeye_msgs</exec_depend>
    <exec_depend>rqt_easy_handeye</exec_depend>

    <export>
        <metapackage/>
    </export>
</package>