<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>easy_handeye</name>
    <version>0.4.3</version>
    <description>
        Simple, hardware-independent ROS2 library for hand-eye calibration
    </description>

    <maintainer email="esposito@imfusion.com">Marco Esposito</maintainer>

    <license>LGPLv3</license>

    <author email="esposito@imfusion.com">Marco Esposito</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>easy_handeye_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_py</depend>
    <depend>python3-transforms3d</depend>
    <depend>python3-opencv</depend>
    <depend>moveit_py</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
