cmake_minimum_required(VERSION 3.8)
project(rqt_easy_handeye)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)

# Install Python modules
ament_python_install_package(${PROJECT_NAME})

# Install Python executables
install(PROGRAMS
  scripts/rqt_calibration_evaluator
  scripts/rqt_calibrationmovements
  scripts/${PROJECT_NAME}
  DESTINATION lib/${PROJECT_NAME}
)

# Install plugin.xml
install(FILES
  plugin.xml
  DESTINATION share/${PROJECT_NAME}
)

# Install resources
install(DIRECTORY
  resource/
  DESTINATION share/${PROJECT_NAME}/resource/
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
