<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rqt_easy_handeye</name>
    <version>0.4.3</version>
    <description>rqt GUI for the easy_handeye package</description>

    <maintainer email="esposito@imfusion.com">Marco Esposito</maintainer>

    <license>LGPLv3</license>

    <author email="esposito@imfusion.com">Marco Esposito</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>rqt_gui</depend>
    <depend>rqt_gui_py</depend>
    <depend>moveit_py</depend>
    <depend>easy_handeye</depend>
    <depend>easy_handeye_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <rqt_gui plugin="${prefix}/plugin.xml"/>
        <build_type>ament_cmake</build_type>
    </export>
</package>
